# thoughtful-dispatch

./: Dockerfile  Makefile  README.md  pyproject.toml
tests/: test_sorter.py
thoughtful_dispatch/: sorter.py
