[project]
name = "thoughtful_dispatch"
version = "0.0.1"
description = "FDE Technical Screen"
authors = [
  { name = "Jason Greenberg", email = "jasonrgreenberg@gmail.com" }
]
urls = {Repository = "https://github.com/jason-greenberg/thoughtful-dispatch"}
readme = "README.md"
scripts = { dispatch = "thoughtful_dispatch.sorter:main" }
requires-python = ">=3.9,<4.0"

[tool.poetry]
name = "thoughtful_dispatch"
version = "0.0.1"
description = "FDE Technical Screen"
authors = ["Jason Greenberg <jasonrgreenberg@gmail.com>"]
packages = [
  {include = "thoughtful_dispatch"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
hypothesis = "^6.131.9"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["thoughtful_dispatch"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # AmbiguousVariableName,
    "E741",
]
per-file-ignores = { "tests/*" = ["S101"] }


[tool.ruff.format]
preview = true
